// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EbayImagePlaceholder /> rendering renders default image placeholder 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="icon icon--image-placeholder"
    focusable="false"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="#image-placeholder"
    />
  </svg>
</div>
`;

exports[`<EbayImagePlaceholder /> rendering renders resized image placeholder 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="icon icon--image-placeholder"
    focusable="false"
    style="height: 100px; width: 100px; border: 1px solid black;"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="#image-placeholder"
    />
  </svg>
</div>
`;
